--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
   }
