--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.14"
+  },
+  "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.6",
@@ -18,6 +24,5 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.6.2"
-  },
-  "dependencies": {}
+  }
 }
