--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pdfmake": "^0.2.4",
     "sequelize": "^6.6.2"
   }
 }
