--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pdfmake": "^0.2.4",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "xlsx": "^0.18.5"
   }
 }
